# Structure-Sensor-ICP

./: .gitignore  CMakeLists.txt  ICP_test.cpp  README.md  show_ply.cpp
depth_to_pcl/: CMakeLists.txt  depth_to_pcl.cpp
get_depth_frames/: CMakeLists.txt  build.sh  get_depth_frames.cpp
new_feature_test/: CMakeLists.txt  test_feature.cpp
ply_files/: Test.ply
