cmake_minimum_required(VERSION 3.1.0)
#project(cloud_viewer)
#find_package(PCL REQUIRED)
#include_directories(${PCL_INCLUDE_DIRS})
#link_directories(${PCL_LIBRARY_DIRS})
#add_definitions(${PCL_DEFINITIONS})
#add_executable (cloud_viewer show_ply.cpp)
#add_executable (test_icp ICP_test.cpp)
#target_link_libraries (cloud_viewer ${PCL_LIBRARIES})
#target_link_libraries (test_icp ${PCL_LIBRARIES})
#include_directories(get_depth_frames)